fix: Fix uniform cost

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "atividade-1",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "test": "node index.js"
+  }
 }
